--- a/alarm.html
+++ b/alarm.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico"/>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./layui/css/layui.css">
     <link rel="stylesheet" href="./css/header.css">
@@ -95,7 +96,6 @@
     var language = $.cookie('language')
 
     if(!$.cookie('username')) {
-        layer.msg(lang_data[language].msg_no_login)
         location.href = './index.html'
     }
 
