--- a/report_form.html
+++ b/report_form.html
@@ -66,6 +66,9 @@
         .xiazai{
             visibility:hidden;
         }
+        #q1,#q2,#l1,#l2,#j1{
+            margin:0 auto;
+        }
     </style>
 </head>
 <body  style="font-family:MyMM;">
@@ -123,8 +126,10 @@
             <div class="page2">
                 <h3 style="font-size: 22px"></h3>
                 <pre></pre>
-                <div style="width:560px;margin:20px auto">
-                    <img width="554" height="500" src="./img/word/p1.png" alt="">
+                <div style="width:560px;margin:20px auto;">
+                    <div style="text-align: center">
+                        <img width="554" height="500" src="./img/word/p1.png" alt="">
+                    </div>
                     <p class="p1_text" style="text-align: center"></p>
                 </div>
             </div>
@@ -132,19 +137,35 @@
                 <h3 style="font-size: 22px;margin-top: 20px"></h3>
                 <pre></pre>
                 <div style="width:560px;margin:20px auto">
-                    <img width="554" height="500" src="./img/word/图片1-2.png" alt="">
+                    <div style="text-align: center">
+                        <img width="554" height="500" src="./img/word/图片1-2.png" alt="">
+                    </div>
+
                     <p class="" style="text-align: center;margin-bottom: 10px"></p>
-                    <img width="554" height="420" src="./img/word/图片1-3.png" alt="">
+                    <div style="text-align: center">
+                        <img width="554" height="420" src="./img/word/图片1-3.png" alt="">
+                    </div>
+
                     <p class="" style="text-align: center;margin-bottom: 10px"></p>
-                    <img width="554" height="420" src="./img/word/图片1-4.png" alt="">
+                    <div style="text-align: center">
+                        <img width="554" height="420" src="./img/word/图片1-4.png" alt="">
+                    </div>
                     <p class="" style="text-align: center;margin-bottom: 10px"></p>
-                    <img width="554" height="420" src="./img/word/图片1-5.png" alt="">
+                    <div style="text-align: center">
+                        <img width="554" height="420" src="./img/word/图片1-5.png" alt="">
+                    </div>
                     <p class="" style="text-align: center;margin-bottom: 10px"></p>
-                    <img width="554" height="420" src="./img/word/图片1-6.png" alt="">
+                    <div style="text-align: center">
+                        <img width="554" height="420" src="./img/word/图片1-6.png" alt="">
+                    </div>
                     <p class="" style="text-align: center;margin-bottom: 10px"></p>
-                    <img width="554" height="420" src="./img/word/图片1-7.png" alt="">
+                    <div style="text-align: center">
+                        <img width="554" height="420" src="./img/word/图片1-7.png" alt="">
+                    </div>
                     <p class="" style="text-align: center;margin-bottom: 10px"></p>
-                    <img width="554" height="420" src="./img/word/图片1-8.png" alt="">
+                    <div style="text-align: center">
+                        <img width="554" height="420" src="./img/word/图片1-8.png" alt="">
+                    </div>
                     <p class="" style="text-align: center;margin-bottom: 10px"></p>
                 </div>
 
@@ -152,15 +173,27 @@
             <div class="page4">
                 <pre></pre>
                 <div style="width:560px;margin:20px auto">
-                    <img width="554" height="660" src="./img/word/图片1-9.png" alt="">
+                    <div style="text-align: center">
+                        <img width="554" height="660" src="./img/word/图片1-9.png" alt="">
+                    </div>
+
                     <p class="" style="text-align: center;margin-bottom: 20px"></p>
-                    <img width="554" height="660" src="./img/word/图片1-10.png" alt="">
+                    <div style="text-align: center">
+                        <img width="554" height="660" src="./img/word/图片1-10.png" alt="">
+                    </div>
+
                     <p class="" style="text-align: center;margin-bottom: 20px"></p>
-                    <img width="554" height="650" src="./img/word/图片1-11.png" alt="">
+                    <div style="text-align: center">
+                        <img width="554" height="650" src="./img/word/图片1-11.png" alt="">
+                    </div>
                     <p class="" style="text-align: center;margin-bottom: 20px"></p>
-                    <img width="554" height="650" src="./img/word/图片1-12.png" alt="">
+                    <div style="text-align: center">
+                        <img width="554" height="650" src="./img/word/图片1-12.png" alt="">
+                    </div>
                     <p class="" style="text-align: center;margin-bottom: 20px"></p>
-                    <img width="554" height="660" src="./img/word/图片1-13.png" alt="">
+                    <div style="text-align: center">
+                        <img width="554" height="660" src="./img/word/图片1-13.png" alt="">
+                    </div>
                     <p class="" style="text-align: center;margin-bottom: 20px"></p>
                 </div>
                 <pre></pre>
@@ -169,103 +202,108 @@
                 <h3 style="font-size: 22px;margin-top: 20px"></h3>
                 <p class="maxValue" style="text-indent:2em;">本次监测周期内，2#塔、3#塔各监测项目均无异常，其中2#塔：差异沉降累计变化值最大测点为静力水准仪J8点，累计变化值为-14.669，其变化速率为-0.001；倾斜累计变化值最大测点为倾角计Q5-Y点，累计变化值为-0.07，其变化速率为0.0；位移累计变化值最大测点为W1-Y点，累计变化值为-0.007，其变化速率为0.0。3#塔：差异沉降累计变化值最大测点为静力水准仪J4点，累计变化值为-13.842，其变化速率为-0.011；倾斜累计变化值最大测点为倾角计Q4-X点，累计变化值为-0.066，其变化速率为0.0；位移累计变化值最大测点为W21-X点，累计变化值为0.007，其变化速率为0.0；裂缝累计变化值最大测点为裂缝计L2点，累计变化值为1.68，其变化速率为0.005。详见表3-1、表3-2。</p>
                 <p class="" style="text-align: center;margin-top: 20px"></p>
-                <table class="ta1"  border="1" cellspacing="0" style="border: 1px solid;margin: auto;">
-                    <tr>
-                        <td style="text-align: center;border: 1px solid;background: #8facf4">监测项目</td>
-                        <td style="text-align: center;border: 1px solid;background: #8facf4">变化值最大测点</td>
-                        <td style="text-align: center;border: 1px solid;background: #8facf4">变化值最大测点变化值</td>
-                        <td style="text-align: center;border: 1px solid;background: #8facf4">累计变形值最大测点</td>
-                        <td style="text-align: center;border: 1px solid;background: #8facf4">累计变形值最大值</td>
-                        <td style="text-align: center;border: 1px solid;background: #8facf4">变化速率</td>
-                        <td style="text-align: center;border: 1px solid;background: #8facf4">备注</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: center;border: 1px solid">差异沉降</td>
-                        <td style="text-align: center;border: 1px solid">静力水准仪--</td>
-                        <td style="text-align: center;border: 1px solid">-</td>
-                        <td style="text-align: center;border: 1px solid">静力水准仪--</td>
-                        <td style="text-align: center;border: 1px solid">-</td>
-                        <td style="text-align: center;border: 1px solid">-</td>
-                        <td style="text-align: center;border: 1px solid"></td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: center;border: 1px solid">倾斜</td>
-                        <td style="text-align: center;border: 1px solid">倾角计--</td>
-                        <td style="text-align: center;border: 1px solid">-</td>
-                        <td style="text-align: center;border: 1px solid">倾角计--</td>
-                        <td style="text-align: center;border: 1px solid">-</td>
-                        <td style="text-align: center;border: 1px solid">-</td>
-                        <td style="text-align: center;border: 1px solid"></td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: center;border: 1px solid">裂缝</td>
-                        <td style="text-align: center;border: 1px solid">裂缝计--</td>
-                        <td style="text-align: center;border: 1px solid">-</td>
-                        <td style="text-align: center;border: 1px solid">裂缝计--</td>
-                        <td style="text-align: center;border: 1px solid">-</td>
-                        <td style="text-align: center;border: 1px solid">-</td>
-                        <td style="text-align: center;border: 1px solid"></td>
-                    </tr>
-                </table>
+                <div style="text-align: center">
+                    <table class="ta1"  border="1" cellspacing="0" style="border: 1px solid;margin: auto;text-align: center">
+                        <tr>
+                            <td style="text-align: center;border: 1px solid;background: #8facf4">监测项目</td>
+                            <td style="text-align: center;border: 1px solid;background: #8facf4">变化值最大测点</td>
+                            <td style="text-align: center;border: 1px solid;background: #8facf4">变化值最大测点变化值</td>
+                            <td style="text-align: center;border: 1px solid;background: #8facf4">累计变形值最大测点</td>
+                            <td style="text-align: center;border: 1px solid;background: #8facf4">累计变形值最大值</td>
+                            <td style="text-align: center;border: 1px solid;background: #8facf4">变化速率</td>
+                            <td style="text-align: center;border: 1px solid;background: #8facf4">备注</td>
+                        </tr>
+                        <tr>
+                            <td style="text-align: center;border: 1px solid">差异沉降</td>
+                            <td style="text-align: center;border: 1px solid">静力水准仪--</td>
+                            <td style="text-align: center;border: 1px solid">-</td>
+                            <td style="text-align: center;border: 1px solid">静力水准仪--</td>
+                            <td style="text-align: center;border: 1px solid">-</td>
+                            <td style="text-align: center;border: 1px solid">-</td>
+                            <td style="text-align: center;border: 1px solid"></td>
+                        </tr>
+                        <tr>
+                            <td style="text-align: center;border: 1px solid">倾斜</td>
+                            <td style="text-align: center;border: 1px solid">倾角计--</td>
+                            <td style="text-align: center;border: 1px solid">-</td>
+                            <td style="text-align: center;border: 1px solid">倾角计--</td>
+                            <td style="text-align: center;border: 1px solid">-</td>
+                            <td style="text-align: center;border: 1px solid">-</td>
+                            <td style="text-align: center;border: 1px solid"></td>
+                        </tr>
+                        <tr>
+                            <td style="text-align: center;border: 1px solid">裂缝</td>
+                            <td style="text-align: center;border: 1px solid">裂缝计--</td>
+                            <td style="text-align: center;border: 1px solid">-</td>
+                            <td style="text-align: center;border: 1px solid">裂缝计--</td>
+                            <td style="text-align: center;border: 1px solid">-</td>
+                            <td style="text-align: center;border: 1px solid">-</td>
+                            <td style="text-align: center;border: 1px solid"></td>
+                        </tr>
+                    </table>
+                </div>
                 <p class="" style="text-align: center;margin-top: 20px"></p>
-                <table class="ta2"  border="1" cellspacing="0" style="border: 1px solid;margin: auto;">
-                    <tr>
-                        <td style="text-align: center;border: 1px solid;background: #8facf4">监测项目</td>
-                        <td style="text-align: center;border: 1px solid;background: #8facf4">变化值最大测点</td>
-                        <td style="text-align: center;border: 1px solid;background: #8facf4">变化值最大测点变化值</td>
-                        <td style="text-align: center;border: 1px solid;background: #8facf4">累计变形值最大测点</td>
-                        <td style="text-align: center;border: 1px solid;background: #8facf4">累计变形值最大值</td>
-                        <td style="text-align: center;border: 1px solid;background: #8facf4">变化速率</td>
-                        <td style="text-align: center;border: 1px solid;background: #8facf4">备注</td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: center;border: 1px solid">倾斜</td>
-                        <td style="text-align: center;border: 1px solid">倾角计--</td>
-                        <td style="text-align: center;border: 1px solid">-</td>
-                        <td style="text-align: center;border: 1px solid">倾角计--</td>
-                        <td style="text-align: center;border: 1px solid">--</td>
-                        <td style="text-align: center;border: 1px solid">-</td>
-                        <td style="text-align: center;border: 1px solid"></td>
-                    </tr>
-                    <tr>
-                        <td style="text-align: center;border: 1px solid">裂缝</td>
-                        <td style="text-align: center;border: 1px solid">裂缝计--</td>
-                        <td style="text-align: center;border: 1px solid">-</td>
-                        <td style="text-align: center;border: 1px solid">裂缝计--</td>
-                        <td style="text-align: center;border: 1px solid">-</td>
-                        <td style="text-align: center;border: 1px solid">-</td>
-                        <td style="text-align: center;border: 1px solid"></td>
-                    </tr>
-                </table>
+                <div style="text-align: center">
+                    <table class="ta2"  border="1" cellspacing="0" style="border: 1px solid;margin: auto;">
+                        <tr>
+                            <td style="text-align: center;border: 1px solid;background: #8facf4">监测项目</td>
+                            <td style="text-align: center;border: 1px solid;background: #8facf4">变化值最大测点</td>
+                            <td style="text-align: center;border: 1px solid;background: #8facf4">变化值最大测点变化值</td>
+                            <td style="text-align: center;border: 1px solid;background: #8facf4">累计变形值最大测点</td>
+                            <td style="text-align: center;border: 1px solid;background: #8facf4">累计变形值最大值</td>
+                            <td style="text-align: center;border: 1px solid;background: #8facf4">变化速率</td>
+                            <td style="text-align: center;border: 1px solid;background: #8facf4">备注</td>
+                        </tr>
+                        <tr>
+                            <td style="text-align: center;border: 1px solid">倾斜</td>
+                            <td style="text-align: center;border: 1px solid">倾角计--</td>
+                            <td style="text-align: center;border: 1px solid">-</td>
+                            <td style="text-align: center;border: 1px solid">倾角计--</td>
+                            <td style="text-align: center;border: 1px solid">--</td>
+                            <td style="text-align: center;border: 1px solid">-</td>
+                            <td style="text-align: center;border: 1px solid"></td>
+                        </tr>
+                        <tr>
+                            <td style="text-align: center;border: 1px solid">裂缝</td>
+                            <td style="text-align: center;border: 1px solid">裂缝计--</td>
+                            <td style="text-align: center;border: 1px solid">-</td>
+                            <td style="text-align: center;border: 1px solid">裂缝计--</td>
+                            <td style="text-align: center;border: 1px solid">-</td>
+                            <td style="text-align: center;border: 1px solid">-</td>
+                            <td style="text-align: center;border: 1px solid"></td>
+                        </tr>
+                    </table>
+                </div>
+
             </div>
             <div class="page6">
                 <h3 style="font-size: 22px;margin-top: 20px"></h3>
                 <p></p>
                 <p>1）<span class="word_A">倾角传感器</span></p>
                 <div id="q1"></div>
-                <div class="img_none">
+                <div class="img_none" style="text-align: center">
                     <img id="q1_img" width="550" height="240" src="" alt="">
                 </div>
                 <p style="text-align: center;margin-bottom: 16px" class="tu4_1"></p>
                 <div id="q2"></div>
-                <div class="img_none">
+                <div class="img_none" style="text-align: center">
                     <img id="q2_img" width="550" height="240" src="" alt="">
                 </div>
                 <p style="text-align: center;margin-bottom: 16px" class="tu4_2"></p>
                 <p>2）<span class="word_C">裂缝</span></p>
                 <div id="l1"></div>
-                <div class="img_none">
+                <div class="img_none" style="text-align: center">
                     <img id="l1_img" width="550" height="240" src="" alt="">
                 </div>
                 <p style="text-align: center;margin-bottom: 16px" class="tu4_3"></p>
                 <div id="l2"></div>
-                <div class="img_none">
+                <div class="img_none" style="text-align: center">
                     <img id="l2_img" width="550" height="240" src="" alt="">
                 </div>
                 <p style="text-align: center;margin-bottom: 16px" class="tu4_4"></p>
                 <p>3）<span class="word_D">差异沉降</span></p>
                 <div id="j1"></div>
-                <div class="img_none">
+                <div class="img_none" style="text-align: center">
                     <img id="j1_img" width="550" height="240" src="" alt="">
                 </div>
                 <p style="text-align: center;margin-bottom: 16px" class="tu4_5"></p>
@@ -278,10 +316,14 @@
                         <img style="margin-left: 18px" width="20" height="20"  src="./img/word/jing.jpg" alt=""><i></i>
                         <img style="margin-left: 18px" width="20" height="20"  src="./img/word/qing.jpg" alt=""><i></i>
                     </p>
-                    <img width="554" height="480" src="./img/word/图片5-1.png" alt="">
+                    <p style="text-align: center"><img width="554" height="480" src="./img/word/图片5-1.png" alt=""></p>
+                    <!--<img width="554" height="480" src="./img/word/图片5-1.png" alt="">-->
                     <p class="p5_1" style="text-align: center;margin-bottom: 20px"></p>
-                    <img width="267" height="267" src="./img/word/p222.png" alt="">
-                    <img width="267" height="267" src="./img/word/p333.png" alt="">
+                    <p style="text-align: center">
+                        <img width="267" height="267" src="./img/word/p222.png" alt="">
+                        <img width="267" height="267" src="./img/word/p333.png" alt="">
+                    </p>
+
                     <p class="p5_2" style="text-align: center;margin-bottom: 20px"></p>
 
                 </div>
